# libzmq

./: .gitignore  CMakeLists.txt  README.md
cmake/: ZMQSourceRunChecks.cmake
src/: platform.hpp
tests/: CMakeLists.txt
